--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ language: python
 python: 3.6
 cache: pip
 
-install: pip install -r requirements_test.txt
+install: pip install dependencies-cli==2.0.0
 
 script: dependencies test
