--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ jobs:
     script: deps dev test --verbose --loose
   - name: deps
     if: (branch = master AND type = cron) OR (branch =~ ^deps.+$ AND type = push)
-    script: deps ci -v
+    script: deps ci -av
